# ZechCodesWebsite

./: .gitignore  Dockerfile  deploy-manifest.yaml  site.config
compose/: site.yaml
docs/: CNAME  index.html
docs/Zechariah Zimmerman_files/: css  styles.min.css
pages-site/: index.html
pages-site/Zechariah Zimmerman_files/: saved_resource
zechcodes/: pyproject.toml  requirements.txt
zechcodes/tests/: test_zechcodes.py
zechcodes/zechcodes/: __init__.py  app.py
