[tool.poetry]
name = "zechcodes"
version = "0.0.1"
description = ""
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.2"
hypercorn = "^0.9.2"
aiohttp-oauth2 = "^0.0.4"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
